--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ scikit-learn>=1.4,<2.0
 # V2 dependencies (Leiden clustering for hybrid approach)
 python-igraph>=0.11,<1.0
 leidenalg>=0.10,<1.0
+google-auth>=2.0,<3.0
+protobuf
