--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,8 @@ scikit-learn>=1.4,<2.0
 python-igraph>=0.11,<1.0
 leidenalg>=0.10,<1.0
 google-auth>=2.0,<3.0
+requests>=2.31,<3.0
 protobuf
+# GCP persistence (Cloud Run + GCS + Firestore)
+google-cloud-storage>=2.16,<3.0
+google-cloud-firestore>=2.16,<3.0
